--- a/Lab2/classes.html
+++ b/Lab2/classes.html
@@ -4,21 +4,24 @@
 <head>
   <title>Classes</title>
 </head>
-
+<link rel="stylesheet" href="../Lab2/Style/style.css">
 <body>
 
 
-  <header><img src="logo.jpg"></header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="classes.html">Classes</a>
-    <a href="instructors.html">Instructors</a>
-    <a href="contact.html">Contact</a>
+  <header id="header"><img src="logo.jpg"></header>
+  <nav id="nav">
+    <ul>
+
+     <li><a href="index.html">Home</a></li>
+    <li><a href="classes.html">Classes</a></li>
+    <li><a href="instructors.html">Instructors</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
-  <main>
-    <p>this is classes page</p>
-    <div class="class_listings">
-      <div>
+  <main class="main">
+   
+    <div class="listing_container">
+      <div class="listing">
         <h3>
           <a href="" title="Finding Sanctuary">Finding Sanctuary</a>
         </h3>
@@ -31,7 +34,7 @@
         <a href="">Read More</a>
       </div>
 
-      <div> 
+      <div class="listing">
         <h3>
           <a href="" title="Finding Sanctuary"> Adult clay classes</a>
         </h3>
@@ -43,7 +46,7 @@
         <a href="">Read More</a>
       </div>
 
-      <div> 
+      <div class="listing">
         <h3>
           <a href="" title="Finding Sanctuary"> Life Drawing</a>
         </h3>
@@ -56,7 +59,7 @@
           <a href="">Read More</a>
       </div>
 
-      <div> 
+      <div class="listing">
         <h3>
           <a href="" title="Finding Sanctuary"> First Thursdays</a>
         </h3>
@@ -67,7 +70,7 @@
           Many cultural venues are open late on the first Thursday of the Month in the Downtown Beaumont Cultural District including the Art Studio, Inc. The studio ha..   </p>
           <a href="">Read More</a>
       </div>
-      <div> 
+      <div class="listing">
         <h3>
           <a href="" title="Finding Sanctuary"> The Inspiring Sketchbook          </a>
         </h3>
@@ -80,8 +83,9 @@
       </div>
     </div>
   </main>
-  <footer>
-    <p><i>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</i></p>
+  <footer id="footer">
+    <p>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</p>
+
   </footer>
 
 
