--- a/Lab2/instructors.html
+++ b/Lab2/instructors.html
@@ -5,74 +5,98 @@
   <title>Atr Studio</title>
 </head>
 
+<link rel="stylesheet" href="../Lab2/Style/style.css">
+
 <body>
 
 
-  <header><img src="logo.jpg"></header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="classes.html">Classes</a>
-    <a href="instructors.html">Instructors</a>
-    <a href="contact.html">Contact</a>
+  <header id="header"><img src="logo.jpg"></header>
+  <nav id="nav">
+    <ul>
+
+      <li><a href="index.html">Home</a></li>
+      <li><a href="classes.html">Classes</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
-  <main>
-    <div>
-      <div>
-        <div class="jack">
+  <main class="main">
+    <div class="instructor_container">
+      <div class="instructor">
+        <div class=instructor_left>
           <img src="img/JackSmitth.jpg" width="400" height="300">
-          <h3>Jack Smith</h3>
         </div>
-        <section>
-          Jack is famouse painter  
-          <p>Phone : 440-555-5555</p>
-          <p>email jackSmith121@gmail.com</p>
-        </section>
+        <div class="instructor_right">
+          <h3>Jack Smith</h3>
+          <section>
+            Jack is famouse painter
+            <p>Phone : 440-555-5555</p>
+            <p>email jackSmith121@gmail.com</p>
+          </section>
+        </div>
       </div>
-      <div> class="Diana">F
-        <img src="img/DianaSpencer.jpg" width="400" height="300">
-        <h3>Diana Spencer</h3>
+      <div class="instructor">
+        <div class=instructor_left>
+          <img src="img/DianaSpencer.jpg" width="400" height="300">
+        </div>
+        <div class="instructor_right">
+          <h3>Diana Spencer</h3>
+
+          <section>
+            Diana is Professional artist. She always enjoys painting and art
+            <p>Phone : 440-111-5555</p>
+            <p>email Diana@gmail.com</p>
+          </section>
+        </div>
       </div>
-      <section>
-        Diana is Professional artist. She always enjoys painting and art  
-        <p>Phone : 440-111-5555</p>
-        <p>email Diana@gmail.com</p>
-      </section>
-    </div>
-    <div class="erica">
-      <img src="img/Erica.jpg" width="400" height="300">
-      <h3>Erica Spencer</h3>
-    </div>
-    <section>
-      Erica is mom and dedicated Professional . She has 4 kdis and loves teaching everything realted to art.
-      <p>Phone : 443-111-5555</p>
-      <p>email Erica@gmail.com</p>
-    </section>
-  </div>
-  <div class="Jasmine">
-    <img src="img/JasmineWillson.jpg" width="400" height="300">
-    <h3>Jasmine  Willson</h3>
-  </div>
-  <section>
-    Jasmine was 10 years old when she start painting and at 32 she is a teacher and famouse painter. 
-    <p>Phone : 224-112-5555</p>
-    <p>email  JasmineWillson@gmail.com</p>
-  </section>
-</div>
-<div class="Jennifer">
-      <div>
-  <img src="img/Jennifer.jpg" width="400" height="300">
-  <h3>Jennifer Bush</h3>
-</div>
-<section>
-   Jennifer is famouse with her attitude towards arts  and music. She is nominated as best artis in Cleveland OHIO
-  <p>Phone : 330-132-6743</p>
-  <p>email  JenniferBush@gmail.com</p>
-</section>
-</div>
-    </div>
+      <div class="instructor">
+        <div class=instructor_left>
+          <img src="img/Erica.jpg" width="400" height="300">
+        </div>
+        <div class="instructor_right">
+          <h3>Erica Spencer</h3>
+
+          <section>
+            Erica is mom and dedicated Professional . She has 4 kdis and loves teaching everything realted to art.
+            <p>Phone : 443-111-5555</p>
+            <p>email Erica@gmail.com</p>
+          </section>
+        </div>
+      </div>
+      <div class="instructor">
+        <div class=instructor_left>
+          <img src="img/JasmineWillson.jpg" width="400" height="300">
+        </div>
+          <div class="instructor_right">
+            <h3>Jasmine Willson</h3>
+
+            <section>
+              Jasmine was 10 years old when she start painting and at 32 she is a teacher and famouse painter.
+              <p>Phone : 224-112-5555</p>
+              <p>email JasmineWillson@gmail.com</p>
+            </section>
+          </div>
+        </div>
+        <div class="instructor">
+          <div class=instructor_left>
+            <img src="img/Jennifer.jpg" width="400" height="300">
+          </div>
+          <div class="instructor_right">
+            <h3>Jennifer Bush</h3>
+
+            <section>
+              Jennifer is famouse with her attitude towards arts and music. She is nominated as best artis in Cleveland
+              OHIO
+              <p>Phone : 330-132-6743</p>
+              <p>email JenniferBush@gmail.com</p>
+            </section>
+          </div>
+        </div>
+      </div>
   </main>
-  <footer>
-    <p><i>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</i></p>
+  <footer id="footer">
+    <p>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</p>
+
   </footer>
 
 
