--- a/Lab2/contact.html
+++ b/Lab2/contact.html
@@ -3,21 +3,24 @@
 
 <head>
   <title>Atr Studio</title>
+  <link rel="stylesheet" href="../Lab2/Style/style.css">
 </head>
 
 <body>
 
-
-  <header><img src="logo.jpg"></header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="classes.html">Classes</a>
-    <a href="instructors.html">Instructors</a>
-    <a href="contact.html">Contact</a>
+  <header id="header"><img src="logo.jpg"></header>
+  <nav id="nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="classes.html">Classes</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
   <main>
-    <p>This is contact page</p>
-    <div>
+    <div class="container">
+      <div  class="contact_form">
+       
       <form>
         <p> <label for="fname">First Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -39,10 +42,12 @@
 
         <button>Send!!!</button>
       </form>
+      </div>
     </div>
   </main>
-  <footer>
-    <p><i>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</i></p>
+  <footer id="footer">
+    <p>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</p>
+
   </footer>
 
 
