--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -3,49 +3,63 @@
 
 <head>
   <title>Atr Studio</title>
+  <link rel="stylesheet" href="../Lab2/Style/style.css">
 </head>
 
 <body>
-
-  <header><img src="logo.jpg"></header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="classes.html">Classes</a>
-    <a href="instructors.html">Instructors</a>
-    <a href="contact.html">Contact</a>
+<div class="main">
+  <header id="header"><img src="logo.jpg"></header>
+  <nav id="nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="classes.html">Classes</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
   <main>
+    <div class="container">
+      <div class="article">
+        <article>
 
-    <article>
-      <P>
-      The Art Studio, Inc. was founded as a non-profit corporation in December 1983 by artists to encourage other
-      artists to practice their disciplines in Southeast Texas. It was envisioned that by addressing the needs of
-      artists in the process of developing their careers, The Art Studio would allow exceptional talent to remain in our
-      region and attract other artists to the area as well. Essential to the needs of artists is a supportive public
-      therefore community outreach has been a primary focus of The Art Studio since its conception. Providing for the
-      most basic needs of artists, The Art Studio makes available affordable studio space and access to equipment for
-      ceramics, painting, foundry, woodworking, and metal work. The Art Studio exhibition space is an engaging
-      alternative to museums and commercial galleries, encouraging the experimental work of living artists as opposed to
-      marketing after the commercial potential has been established. The Art Studio’s education programs are an
-      effective means of community outreach and another source of income for the artists.
-    </P>
-    </article>
+          <P>
+            The Art Studio, Inc. was founded as a non-profit corporation in December 1983 by artists to encourage other
+            artists to practice their disciplines in Southeast Texas. It was envisioned that by addressing the needs of
+            artists in the process of developing their careers, The Art Studio would allow exceptional talent to remain
+            in our
+            region and attract other artists to the area as well. Essential to the needs of artists is a supportive
+            public
+            therefore community outreach has been a primary focus of The Art Studio since its conception. Providing for
+            the
+            most basic needs of artists, The Art Studio makes available affordable studio space and access to equipment
+            for
+            ceramics, painting, foundry, woodworking, and metal work. The Art Studio exhibition space is an engaging
+            alternative to museums and commercial galleries, encouraging the experimental work of living artists as
+            opposed to
+            marketing after the commercial potential has been established. The Art Studio’s education programs are an
+            effective means of community outreach and another source of income for the artists.
+          </P>
 
-    <b> GOALS</b>
-<ul>
-<li>To present public exhibitions</li>
-<li>To provide educational opportunities</li>
-<li>To provide accessible equipment for artists</li>
-<li>To provide peer feedback through association with other artists and crafts people</li>
-  
-</ul>
-</main>
-  <footer>
-    <p><i>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</i></p>
+        </article>
+      </div>
+      <div class="goals">
+        <span class="goals_title"> GOALS</span>
+        <ul>
+          <li>To present public exhibitions</li>
+          <li>To provide educational opportunities</li>
+          <li>To provide accessible equipment for artists</li>
+          <li>To provide peer feedback through association with other artists and crafts people</li>
+
+        </ul>
+      </div>
+    </div>
+  </main>
+  <footer id="footer">
+    <p>Copyright &copy; 2021 Nana Khanishvili. All rights reserved</p>
 
   </footer>
 
-
+</div>
 </body>
 
 </html>
